--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -10,17 +10,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fasrecon"
+        android:theme="@style/Theme.Fasrecon_primary"
         tools:targetApi="31">
         <activity
-            android:name=".ui.login.ForgotPassword"
+            android:name=".ui.forgotpassword.ForgotPassword"
             android:exported="false" />
         <activity
-            android:name=".ui.login.RegisterActivity"
+            android:name=".ui.register.RegisterActivity"
             android:exported="false" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false" />
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false" />
