--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -10,21 +10,28 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fasrecon_primary"
         tools:targetApi="31">
         <activity
             android:name=".ui.forgotpassword.ForgotPassword"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Fasrecon_primary"
+            />
         <activity
             android:name=".ui.register.RegisterActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Fasrecon_primary"
+            />
 
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Fasrecon_primary"
+            />
         <activity
             android:name=".ui.onboardingpage.OnboardingPageActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Fasrecon_primary"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +41,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Fasrecon_tertiary" />
     </application>
 
 </manifest>
