--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Fasrecon_tertiary" />
