--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -12,26 +12,25 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.profile.ProfileSetting"
+            android:exported="false"
+            android:theme="@style/Theme.Fasrecon_primary"/>
+        <activity
             android:name=".ui.forgotpassword.ForgotPassword"
             android:exported="false"
-            android:theme="@style/Theme.Fasrecon_primary"
-            />
+            android:theme="@style/Theme.Fasrecon_primary" />
         <activity
             android:name=".ui.register.RegisterActivity"
             android:exported="false"
-            android:theme="@style/Theme.Fasrecon_primary"
-            />
-
+            android:theme="@style/Theme.Fasrecon_primary" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
-            android:theme="@style/Theme.Fasrecon_primary"
-            />
+            android:theme="@style/Theme.Fasrecon_primary" />
         <activity
             android:name=".ui.onboardingpage.OnboardingPageActivity"
             android:exported="true"
-            android:theme="@style/Theme.Fasrecon_primary"
-            >
+            android:theme="@style/Theme.Fasrecon_primary">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
