--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:name=".ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Fasrecon_primary" />
+            android:theme="@style/Theme.Fasrecon_tertiary" />
     </application>
 
 </manifest>
