--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,9 +15,10 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.profile.ProfileSetting"
+            android:name=".ui.profile.ProfileSettings"
             android:exported="false"
-            android:theme="@style/Theme.Fasrecon_primary"/>
+            android:theme="@style/Theme.Fasrecon_primary"
+            android:label="Profile Settings"/>
         <activity
             android:name=".ui.forgotpassword.ForgotPassword"
             android:exported="false"
@@ -45,7 +45,7 @@
             android:name=".ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Fasrecon_tertiary" />
+            android:theme="@style/Theme.Fasrecon_primary" />
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
