--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -16,10 +16,20 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.splashscreen.SplashScreenActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Fasrecon_primary">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.changepassword.ChangePassword"
             android:exported="false"
             android:label="@string/change_password"
-            android:theme="@style/Theme.Fasrecon_secondary"/>
+            android:theme="@style/Theme.Fasrecon_secondary" />
         <activity
             android:name=".ui.profile.ProfileSettings"
             android:exported="false"
@@ -39,18 +49,13 @@
             android:theme="@style/Theme.Fasrecon_primary" />
         <activity
             android:name=".ui.onboardingpage.OnboardingPageActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Fasrecon_primary">
-        </activity>
+            android:exported="false"
+            android:theme="@style/Theme.Fasrecon_primary"/>
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true"
+            android:exported="false"
             android:theme="@style/Theme.Fasrecon_primary">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
