--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.languagesettings.LanguageSettingsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Fasrecon_primary"/>
         <activity
             android:name=".ui.splashscreen.SplashScreenActivity"
             android:exported="true"
@@ -29,12 +30,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.changepassword.ChangePassword"
+            android:name=".ui.changepassword.ChangePasswordActivity"
             android:exported="false"
             android:label="@string/change_password"
             android:theme="@style/Theme.Fasrecon_secondary" />
         <activity
-            android:name=".ui.profile.ProfileSettings"
+            android:name=".ui.profile.ProfileSettingsActivity"
             android:exported="false"
             android:label="Profile Settings"
             android:theme="@style/Theme.Fasrecon_secondary" />
@@ -57,7 +58,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.Fasrecon_primary"></activity>
+            android:theme="@style/Theme.Fasrecon_primary"/>
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
