--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -17,10 +17,13 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.chatbot.ChatbotActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.languagesettings.LanguageSettingsActivity"
             android:exported="false"
             android:label="@string/language"
-            android:theme="@style/Theme.Fasrecon_secondary"/>
+            android:theme="@style/Theme.Fasrecon_secondary" />
         <activity
             android:name=".ui.splashscreen.SplashScreenActivity"
             android:exported="true"
@@ -60,11 +63,12 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.Fasrecon_primary"/>
+            android:theme="@style/Theme.Fasrecon_primary" />
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             tools:ignore="DiscouragedApi,LockedOrientationActivity,MissingClass" />
     </application>
+
 </manifest>
