--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.chatbot.ChatbotActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/chatbot"
+            android:theme="@style/Theme.Fasrecon_secondary"/>
         <activity
             android:name=".ui.languagesettings.LanguageSettingsActivity"
             android:exported="false"
@@ -26,8 +28,13 @@
             android:theme="@style/Theme.Fasrecon_secondary" />
         <activity
             android:name=".ui.splashscreen.SplashScreenActivity"
-            android:exported="false"
+            android:exported="true"
             android:theme="@style/Theme.Fasrecon_primary">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.changepassword.ChangePasswordActivity"
@@ -57,13 +64,8 @@
             android:theme="@style/Theme.Fasrecon_primary" />
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true"
+            android:exported="false"
             android:theme="@style/Theme.Fasrecon_primary">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
