Feat: get user data on profile fragment

--- a/Mobile Development/app/src/main/AndroidManifest.xml
+++ b/Mobile Development/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:label="@string/change_password"
             android:theme="@style/Theme.Fasrecon_secondary" />
         <activity
-            android:name=".ui.profile.ProfileSettingsActivity"
+            android:name=".ui.profilesettings.ProfileSettingsActivity"
             android:exported="false"
             android:label="@string/profile_settings"
             android:theme="@style/Theme.Fasrecon_secondary" />
