--- a/Mobile Development/gradle/libs.versions.toml
+++ b/Mobile Development/gradle/libs.versions.toml
@@ -27,6 +27,10 @@ legacySupportV4 = "1.0.0"
 fragmentKtx = "1.8.4"
 ucrop = "2.2.8"
 circleimageview = "3.1.0"
+junitJunit = "4.12"
+espressoIdlingResource = "3.6.1"
+espressoIntents = "3.6.1"
+monitor = "1.7.2"
 
 
 [libraries]
@@ -60,6 +64,10 @@ androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 ucrop = { module = "com.github.yalantis:ucrop", version.ref = "ucrop" }
 circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
+junit-junit = { group = "junit", name = "junit", version.ref = "junitJunit" }
+androidx-monitor = { module = "androidx.test:monitor", version.ref = "monitor" }
+androidx-espresso-idling-resource = { module = "androidx.test.espresso:espresso-idling-resource", version.ref = "espressoIdlingResource" }
+espresso-intents = { module = "androidx.test.espresso:espresso-intents", version.ref = "espressoIntents" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
